--- a/docs/hpc/09_ood/06_jbrowse_genome_browser.mdx
+++ b/docs/hpc/09_ood/06_jbrowse_genome_browser.mdx
@@ -137,4 +137,4 @@ Enter the full path to the directory you created above in the `Data Folder Path`
 
 ## JBrowse running in OOD
 
-After a short pause while your job is in the Greene queue and then starts up, you'll see the JBrowse application.
+After a short pause while your job is in the Torch queue and then starts up, you'll see the JBrowse application.
